--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://github.com/House-Rules/house-rules.github.io/index.html" />
+    <meta http-equiv="refresh" content="0; url=http://github.com/House-Rules/house-rules.github.io/public/index.html" />
     <title></title>
   </head>
   <body>
